Fix weeknumbers spacing for inline date pickers

--- a/src/scripts/Providers/OSUI/SharedProviderResources/Flatpickr/scss/_flatpickr.scss
+++ b/src/scripts/Providers/OSUI/SharedProviderResources/Flatpickr/scss/_flatpickr.scss
@@ -93,6 +93,10 @@
 	&.inline {
 		--osui-flatpickr-layer: var(--layer-global-screen);
 		display: inline-block;
+
+		.flatpickr-weekwrapper {
+			min-width: max-content;
+		}
 	}
 }
 
